attached_assets/Pasted--Application-directory-var-www-deepcut-ai-Environment-f_1768140748655.txt

Application directory: /var/www/deepcut-ai
Environment file: /var/www/deepcut-ai/.env

[OK] DeepCut AI is now running on port 5000!
root@vmi2635573:~# ^C
root@vmi2635573:~#  pm2 logs deepcut-ai     # View logs
[TAILING] Tailing last 15 lines for [deepcut-ai] process (change the value with --lines option)
/var/log/pm2/deepcut-error-0.log last 15 lines:
0|deepcut- | 2026-01-11 15:04:38:   hint: undefined,
0|deepcut- | 2026-01-11 15:04:38:   position: undefined,
0|deepcut- | 2026-01-11 15:04:38:   internalPosition: undefined,
0|deepcut- | 2026-01-11 15:04:38:   internalQuery: undefined,
0|deepcut- | 2026-01-11 15:04:38:   where: undefined,
0|deepcut- | 2026-01-11 15:04:38:   schema: undefined,
0|deepcut- | 2026-01-11 15:04:38:   table: undefined,
0|deepcut- | 2026-01-11 15:04:38:   column: undefined,
0|deepcut- | 2026-01-11 15:04:38:   dataType: undefined,
0|deepcut- | 2026-01-11 15:04:38:   constraint: undefined,
0|deepcut- | 2026-01-11 15:04:38:   file: 'auth.c',
0|deepcut- | 2026-01-11 15:04:38:   line: '331',
0|deepcut- | 2026-01-11 15:04:38:   routine: 'auth_failed'
0|deepcut- | 2026-01-11 15:04:38: }
0|deepcut- | 2026-01-11 15:04:38: [AUTH] Failed to create admin user: password authentication failed for user "deepcut"

/var/log/pm2/deepcut-out-0.log last 15 lines:
0|deepcut- | 2026-01-11 15:04:38: [CLEANUP] Starting cleanup scheduler (every 1 hours) 
0|deepcut- | 2026-01-11 15:04:38: [SERVER] DeepCut AI server started with cleanup scheduler 
0|deepcut- | 2026-01-11 15:04:38: 3:04:38 PM [express] serving on port 5000
0|deepcut- | 2026-01-11 15:05:38: [CLEANUP] Starting asset cleanup { maxAgeHours: 24 }
0|deepcut- | 2026-01-11 15:05:38: [CLEANUP] Cleanup completed { projectsDeleted: 0, filesDeleted: 0, freedMB: 0 }

^C
root@vmi2635573:~#  pm2 status              # Check status
┌────┬───────────────┬─────────────┬─────────┬─────────┬──────────┬────────┬──────┬───────────┬──────────┬──────────┬──────────┬──────────┐
│ id │ name          │ namespace   │ version │ mode    │ pid      │ uptime │ ↺    │ status    │ cpu      │ mem      │ user     │ watching │
├────┼───────────────┼─────────────┼─────────┼─────────┼──────────┼────────┼──────┼───────────┼──────────┼──────────┼──────────┼──────────┤
│ 0  │ deepcut-ai    │ default     │ 1.0.0   │ fork    │ 145707   │ 5m     │ 0    │ online    │ 0%       │ 90.9mb   │ root     │ disabled │
└────┴───────────────┴─────────────┴─────────┴─────────┴──────────┴────────┴──────┴───────────┴──────────┴──────────┴──────────┴──────────┘
root@vmi2635573:~# ^C
root@vmi2635573:~#   pm2 logs deepcut-ai     # View logs
[TAILING] Tailing last 15 lines for [deepcut-ai] process (change the value with --lines option)
/var/log/pm2/deepcut-out-0.log last 15 lines:
0|deepcut- | 2026-01-11 15:04:38: [CLEANUP] Starting cleanup scheduler (every 1 hours) 
0|deepcut- | 2026-01-11 15:04:38: [SERVER] DeepCut AI server started with cleanup scheduler 
0|deepcut- | 2026-01-11 15:04:38: 3:04:38 PM [express] serving on port 5000
0|deepcut- | 2026-01-11 15:05:38: [CLEANUP] Starting asset cleanup { maxAgeHours: 24 }
0|deepcut- | 2026-01-11 15:05:38: [CLEANUP] Cleanup completed { projectsDeleted: 0, filesDeleted: 0, freedMB: 0 }
0|deepcut- | 2026-01-11 15:10:41: 3:10:41 PM [express] GET /api/user 401 in 3ms

/var/log/pm2/deepcut-error-0.log last 15 lines:
0|deepcut- | 2026-01-11 15:10:48:   detail: undefined,
0|deepcut- | 2026-01-11 15:10:48:   hint: undefined,
0|deepcut- | 2026-01-11 15:10:48:   position: undefined,
0|deepcut- | 2026-01-11 15:10:48:   internalPosition: undefined,
0|deepcut- | 2026-01-11 15:10:48:   internalQuery: undefined,
0|deepcut- | 2026-01-11 15:10:48:   where: undefined,
0|deepcut- | 2026-01-11 15:10:48:   schema: undefined,
0|deepcut- | 2026-01-11 15:10:48:   table: undefined,
0|deepcut- | 2026-01-11 15:10:48:   column: undefined,
0|deepcut- | 2026-01-11 15:10:48:   dataType: undefined,
0|deepcut- | 2026-01-11 15:10:48:   constraint: undefined,
0|deepcut- | 2026-01-11 15:10:48:   file: 'auth.c',
0|deepcut- | 2026-01-11 15:10:48:   line: '331',
0|deepcut- | 2026-01-11 15:10:48:   routine: 'auth_failed'
0|deepcut- | 2026-01-11 15:10:48: }

0|deepcut-ai  | 2026-01-11 15:11:16: 3:11:16 PM [express] GET /api/user 401 in 2ms
0|deepcut-ai  | 2026-01-11 15:11:21: error: password authentication failed for user "deepcut"
0|deepcut-ai  | 2026-01-11 15:11:21:     at /var/www/deepcut-ai/dist/index.cjs:70:13330
0|deepcut-ai  | 2026-01-11 15:11:21:     at process.processTicksAndRejections (node:internal/process/task_queues:95:5)
0|deepcut-ai  | 2026-01-11 15:11:21:     at async /var/www/deepcut-ai/dist/index.cjs:70:28666
0|deepcut-ai  | 2026-01-11 15:11:21:     at async Ox.getUserByUsername (/var/www/deepcut-ai/dist/index.cjs:100:454)
0|deepcut-ai  | 2026-01-11 15:11:21:     at async $x._verify (/var/www/deepcut-ai/dist/index.cjs:113:4977) {
0|deepcut-ai  | 2026-01-11 15:11:21:   length: 103,
0|deepcut-ai  | 2026-01-11 15:11:21:   severity: 'FATAL',
0|deepcut-ai  | 2026-01-11 15:11:21:   code: '28P01',
0|deepcut-ai  | 2026-01-11 15:11:21:   detail: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   hint: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   position: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   internalPosition: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   internalQuery: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   where: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   schema: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   table: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   column: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   dataType: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   constraint: undefined,
0|deepcut-ai  | 2026-01-11 15:11:21:   file: 'auth.c',
0|deepcut-ai  | 2026-01-11 15:11:21:   line: '331',
0|deepcut-ai  | 2026-01-11 15:11:21:   routine: 'auth_failed'
0|deepcut-ai  | 2026-01-11 15:11:21: }
